@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 Enhancements::
 
 * allow font settings to be specified per side of a running content periphery (#2316)
+* don't split code block that has less than breakable minimum lines (#2304)
 
 == 2.3.0 (2022-08-16) - @mojavelinux
 
